Added extra Conflict files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ lab2_git_2020_partA.pdf
 lab2_git_2020_partB.pdf
 a.out
 sample_code.c
+sqrt_BACKUP_5481.c
+sqrt_BACKUP_5565.c
+sqrt_BASE_5481.c
+sqrt_BASE_5565.c
+sqrt_LOCAL_5481.c
+sqrt_LOCAL_5565.c
+sqrt_REMOTE_5481.c
+sqrt_REMOTE_5565.c
